# VK_EasyEdge_Inference

./: .gitattributes  README.md
VK_Classification_ARM/RES_DIR/crop_res/: conf.json  label_list.txt  preprocess_args.json
VK_Classification_ARM/RES_DIR/garbage_res/: conf.json  label_list.txt
VK_Classification_ARM/cpp/: ReadMe.txt
VK_Classification_ARM/cpp/include/easyedge/: easyedge_config.h  easyedge_video_decoding.h
VK_Classification_ARM/cpp/lib/: libeasyedge.so.1.3.5  libeasyedge_c_wrapper.so.1.3.5  libverify.so.1.2.0
VK_Classification_ARM/cpp/src/: CMakeLists.txt
VK_Classification_ARM/cpp/src/common/: vision_proc.cpp
VK_Classification_ARM/cpp/src/vk_classification_arm/: CMakeLists.txt  vk_classification_arm.cpp
VK_Classification_GPU/RES_DIR/garbage_res/: conf.json  model
VK_Classification_GPU/RES_DIR/vehicle_res/: preprocess_args.json
VK_Classification_GPU/cpp/: ReadMe.txt
VK_Classification_GPU/cpp/include/easyedge/: easyedge_c.h
VK_Classification_GPU/cpp/lib/: libeasyedge.so.1.3.5  libeasyedge_extension.so.1.3.5
VK_Classification_GPU/cpp/src/: CMakeLists.txt
VK_Classification_GPU/cpp/src/cmake/: aarch64-jetson.cmake
VK_Classification_GPU/cpp/src/common/: frame_buffer.cpp  frame_buffer.h
VK_Classification_GPU/cpp/src/vk_classification_gpu/: CMakeLists.txt  vk_classification_gpu.cpp
VK_Detection_ARM/RES_DIR/beans_res/: conf.json  label_list.txt
VK_Detection_ARM/cpp/: ReadMe.txt
VK_Detection_ARM/cpp/include/easyedge/: easyedge.h  (+2 more)
VK_Detection_ARM/cpp/lib/: libeasyedge_videoio.so.1.3.5
VK_Detection_ARM/cpp/src/: CMakeLists.txt
VK_Detection_ARM/cpp/src/cmake/: aarch64-cpu-generic.cmake  opencv.cmake
VK_Detection_ARM/cpp/src/vk_detection_arm/: CMakeLists.txt  vk_detection_arm.cpp
VK_Detection_GPU/RES_DIR/ARM_RES/: conf.json  label_list.txt
VK_Detection_GPU/RES_DIR/beans_res/: conf.json  model  preprocess_args.json
VK_Detection_GPU/RES_DIR/firesmoke_res/: conf.json  model
VK_Detection_GPU/RES_DIR/helmet_res2/: conf.json  label_list.txt  model
VK_Detection_GPU/RES_DIR/rebar_res3/: conf.json  model  preprocess_args.json
VK_Detection_GPU/RES_DIR/vehicle_res/: conf.json  label_list.txt  model
VK_Detection_GPU/cpp/: ReadMe.txt
VK_Detection_GPU/cpp/lib/: libeasyedge_c_wrapper.so.1.3.5  libeasyedge_videoio.so.1.3.5
VK_Detection_GPU/cpp/src/: CMakeLists.txt
VK_Detection_GPU/cpp/src/common/: vision_proc.h
VK_Detection_GPU/cpp/src/vk_detection_gpu/: CMakeLists.txt  vk_detection_gpu.cpp
data/: EaseEdge新增vk_video_inference案例操作记录.docx  VK_EasyEdge_Inference使用说明.docx
data/backup/: demo_video_inference.cpp  vk_video_inference滚动显示结果代码片段.cpp  源(1).cpp
data/backup/vk_background/: 1.README.txt  test.base  vkbg.cpp
(+2 files in other folders)
